bpo-41819: Fix compiler warning in init_dump_ascii_wstr() (GH-22332)

Fix the compiler warning:

format specifies type `wint_t` (aka `int`) but the argument has type `unsigned int`